<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity1"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addmission_head"
            android:textSize="34dp"
            android:textAlignment="center"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="15sp"
            android:textColor="@color/colorPrimary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addmission_subhead"
            android:textSize="24dp"
            android:layout_gravity="start"
            android:layout_marginLeft="0sp"
            android:layout_marginTop="30sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="12sp"
            android:justificationMode="inter_word"
            android:layout_marginBottom="30dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/addmission_desc" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addmission_subhead_2"
            android:textSize="24dp"
            android:layout_gravity="start"
            android:layout_marginLeft="0sp"
            android:layout_marginTop="15sp"
            android:textColor="@color/colorPrimary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="12sp"
            android:justificationMode="inter_word"
            android:layout_marginBottom="30dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/addmission_desc_2" />

    </LinearLayout>
</ScrollView>